--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -7,11 +7,20 @@
     <title>Digisolve- Digital Agency For Winners</title>
     <!-- <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com"> -->
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;400;500;700&display=swap" rel="stylesheet">">
-    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="vendors/css/fluid.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    
 </head>
 <body>
-    <h1 class="row">Digisolve</h1>
+    <header>
+        <div class="header-box">
+            <div class="header-text-box">
+                <h1>Digital Agency</h1>
+                <h2>The one stop for all your digital solutions</h2>
+            </div>
+            <a href="" class="btn btn-full">Get a Quote Today</a>
+        </div>
+    </header>
 </body>
 </html>
