--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -15,6 +15,16 @@
 <body>
     <header>
         <div class="header-box">
+            <nav>
+                <img src="/My_Digisolve/Digisolve/resources/img/digisolve-logo.png"
+                 alt="Digisolve Logo" class="logo">
+                 <ul class="main-nav">
+                     <li><a href="#">Home</a></li>
+                     <li><a href="#">Contact</a></li>
+                     <li><a href="#">About</a></li>
+                     
+                 </ul>
+            </nav>
             <div class="header-text-box">
                 <h1>Digital Agency</h1>
                 <h2>The one stop for all your digital solutions</h2>
