--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -32,5 +32,13 @@
             <a href="" class="btn btn-full">Get a Quote Today</a>
         </div>
     </header>
+    <section class="about-section">
+        <div class="row">
+            <div class="col span_1_of_2">
+                <h1>A Digital Agency focused on growing your Online Presence</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat ducimus impedit, excepturi, corrupti ipsam autem minus sunt voluptas iusto fuga soluta accusamus odit nesciunt eos error assumenda earum. Sint, veritatis?</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
