--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -34,9 +34,15 @@
     </header>
     <section class="about-section">
         <div class="row">
-            <div class="col span_1_of_2">
-                <h1>A Digital Agency focused on growing your Online Presence</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat ducimus impedit, excepturi, corrupti ipsam autem minus sunt voluptas iusto fuga soluta accusamus odit nesciunt eos error assumenda earum. Sint, veritatis?</p>
+            <div class="col span_1_of_2 about-box">
+                <h2 class="about-heading">A Digital Agency focused on growing your Online Presence</h2>
+                <p class="about-para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                     Quaerat ducimus impedit, excepturi, corrupti ipsam autem minus sunt voluptas
+                      iusto fuga soluta accusamus odit nesciunt eos error assumenda earum. Sint, veritatis?</p>
+                <a class="btn btn-ghost" href="">Read More</a>
+            </div>
+            <div class="col span_1_of_2 about-box">
+                <img src="/My_Digisolve/Digisolve/resources/img/about-img.jpg" alt="" class="laptop-img">
             </div>
         </div>
     </section>
