--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -46,5 +46,17 @@
             </div>
         </div>
     </section>
+    <section class="work-section">
+        <div class="row">
+            <h2 class="section-heading">Our Work</h2>
+            <h3 class="section-subheading">Lorem ipsum dolor</h3>
+        </div>
+        <div class="work-portfolio">
+            <figure class="portfolio-image">
+                <img src="online-advertising.jpg" alt="Online Advertising">
+                <p class="work-para">Online Advertising</p>
+            </figure>
+        </div>
+    </section>
 </body>
 </html>
