--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -51,24 +51,32 @@
             <h2 class="section-heading">Our Work</h2>
             <h3 class="section-subheading">Lorem ipsum dolor</h3>
         </div>
-        <div class="work-portfolio">
-            <figure class="portfolio-image">
-                <img src="/My_Digisolve/Digisolve/resources/img/online-advertising.png" alt="Online Advertising Image">
-                <p class="work-para">Online Advertising</p>
-            </figure>
-            <figure class="portfolio-image">
-                <img src="/My_Digisolve/Digisolve/resources/img/social-media-campaigns.png" alt="Social social-media-campaigns">
-                <p class="work-para">Social Media Campaign</p>
-            </figure>
-            <figure class="portfolio-image">
-                <img src="/My_Digisolve/Digisolve/resources/img/ux-design.png" alt="UX Image">
-                <p class="work-para">UX Designs</p>
-            </figure>
-            <figure class="portfolio-image">
-                <img src="/My_Digisolve/Digisolve/resources/img/branding-digital-marketing.png" alt="branding-digital-marketing">
-                <p class="work-para">Branding & Digital Marketing</p>
-            </figure>
-        </div>
+        <ul class="work-portfolio">
+            <li>
+                <figure class="portfolio-image">
+                    <img src="/My_Digisolve/Digisolve/resources/img/online-advertising.png" alt="Online Advertising Image">
+                    <p class="work-para">Online Advertising</p>
+                </figure>
+            </li>
+            <li>
+                <figure class="portfolio-image">
+                    <img src="/My_Digisolve/Digisolve/resources/img/social-media-campaigns.png" alt="Social social-media-campaigns">
+                    <p class="work-para">Social Media Campaign</p>
+                </figure>
+            </li>
+            <li>
+                <figure class="portfolio-image">
+                    <img src="/My_Digisolve/Digisolve/resources/img/ux-design.png" alt="UX Image">
+                    <p class="work-para">UX Designs</p>
+                </figure>
+            </li>
+            <li>
+                <figure class="portfolio-image">
+                    <img src="/My_Digisolve/Digisolve/resources/img/branding-digital-marketing.png" alt="branding-digital-marketing">
+                    <p class="work-para">Branding & Digital Marketing</p>
+                </figure>
+            </li>
+        </ul>
     </section>
 </body>
 </html>
