--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -49,7 +49,7 @@
     <section class="work-section">
         <div class="row">
             <h2 class="section-heading">Our Work</h2>
-            <h3 class="section-subheading">Lorem ipsum dolor</h3>
+            <h3 class="section-sub-heading">Lorem ipsum dolor</h3>
         </div>
         <ul class="work-portfolio">
             <li>
