--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -51,7 +51,7 @@
             <h2 class="section-heading">Our Work</h2>
             <h3 class="section-sub-heading">Lorem ipsum dolor</h3>
         </div>
-        <ul class="work-portfolio">
+        <ul class="work-portfolio clearfix">
             <li>
                 <figure class="portfolio-image">
                     <img src="/My_Digisolve/Digisolve/resources/img/online-advertising.png" alt="Online Advertising Image">
@@ -78,5 +78,15 @@
             </li>
         </ul>
     </section>
+    <section class="services-section">
+        <div class="row">
+            <h2 class="section-heading">Our Services</h2>
+            <h3 class="section-sub-heading">Lorem ipsum dolor</h3>
+        </div>
+        <div class="row">
+            
+        </div>
+    </section>
+
 </body>
 </html>
