--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digisolve- Digital Agency For Winners</title>
+    <script src="https://kit.fontawesome.com/a42d75c02e.js" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com"> -->
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;400;500;700&display=swap" rel="stylesheet">
@@ -84,7 +85,13 @@
             <h3 class="section-sub-heading">Lorem ipsum dolor</h3>
         </div>
         <div class="row">
-            
+            <div class="col span_1_of_4">
+                <i class='fas fa-tag'></i>
+                <h4 class="service-heading">Branding</h4>
+                <p class="service-para">Lorem ipsum dolor sit amet consectetur adipi
+                    voluptates, consequatur ea!</p>
+                <a class="service-link" href="">Read More...</a>
+            </div>
         </div>
     </section>
 
