--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -86,7 +86,7 @@
         </div>
         <div class="row">
             <div class="col span_1_of_4">
-                <i class='fas fa-tag'></i>
+                <i class='fas fa-tags big-icon'></i>
                 <h4 class="service-heading">Branding</h4>
                 <p class="service-para">Lorem ipsum dolor sit amet consectetur adipi
                     voluptates, consequatur ea!</p>
