--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -85,9 +85,30 @@
             <h3 class="section-sub-heading">Lorem ipsum dolor</h3>
         </div>
         <div class="row">
-            <div class="col span_1_of_4">
+            <div class="col span_1_of_4 service-box">
                 <i class='fas fa-tags big-icon'></i>
                 <h4 class="service-heading">Branding</h4>
+                <p class="service-para">Lorem ipsum dolor sit amet consectetur adipi
+                    voluptates, consequatur ea!</p>
+                <a class="service-link" href="">Read More...</a>
+            </div>
+            <div class="col span_1_of_4 service-box">
+                <i class='fas fa-pen big-icon'></i>
+                <h4 class="service-heading">Content</h4>
+                <p class="service-para">Lorem ipsum dolor sit amet consectetur adipi
+                    voluptates, consequatur ea!</p>
+                <a class="service-link" href="">Read More...</a>
+            </div>
+            <div class="col span_1_of_4 service-box">
+                <i class='fas fa-funnel-dollar big-icon'></i>
+                <h4 class="service-heading">Marketing</h4>
+                <p class="service-para">Lorem ipsum dolor sit amet consectetur adipi
+                    voluptates, consequatur ea!</p>
+                <a class="service-link" href="">Read More...</a>
+            </div>
+            <div class="col span_1_of_4 service-box">
+                <i class='fas fa-code big-icon'></i>
+                <h4 class="service-heading">Web Design</h4>
                 <p class="service-para">Lorem ipsum dolor sit amet consectetur adipi
                     voluptates, consequatur ea!</p>
                 <a class="service-link" href="">Read More...</a>
