--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -115,6 +115,40 @@
             </div>
         </div>
     </section>
+    <section class="partners-section">
+        <div class="row">
+            <h2 class="section-heading">Featured Clients</h2>
+            <h3 class="section-sub-heading">We've worked with some of the best companies in the
+                world. Here are some of our amazing partners.
+            </h3>
+            <div class="col span_1_of_4">
+                <img class="partner-image" src="/My_Digisolve/Digisolve/resources/img/brand-logo-1.png" alt="brand logo">
+            </div>
+            <div class="col span_1_of_4">
+                <img class="partner-image" src="/My_Digisolve/Digisolve/resources/img/brand-logo-2.png" alt="brand logo">
+            </div>
+            <div class="col span_1_of_4">
+                <img class="partner-image" src="/My_Digisolve/Digisolve/resources/img/brand-logo-3.png" alt="brand logo">
+            </div>
+            <div class="col span_1_of_4">
+                <img class="partner-image" src="/My_Digisolve/Digisolve/resources/img/brand-logo-4.png" alt="brand logo">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col span_1_of_4">
+                <img class="partner-image" src="/My_Digisolve/Digisolve/resources/img/brand-logo-5.png" alt="brand logo">
+            </div>
+            <div class="col span_1_of_4">
+                <img class="partner-image" src="/My_Digisolve/Digisolve/resources/img/brand-logo-6.png" alt="brand logo">
+            </div>
+            <div class="col span_1_of_4">
+                <img class="partner-image" src="/My_Digisolve/Digisolve/resources/img/brand-logo-7.png" alt="brand logo">
+            </div>
+            <div class="col span_1_of_4">
+                <img class="partner-image" src="/My_Digisolve/Digisolve/resources/img/brand-logo-8.png" alt="brand logo">
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
