--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -121,6 +121,8 @@
             <h3 class="section-sub-heading">We've worked with some of the best companies in the
                 world. Here are some of our amazing partners.
             </h3>
+        </div>
+        <div class="row">
             <div class="col span_1_of_4">
                 <img class="partner-image" src="/My_Digisolve/Digisolve/resources/img/brand-logo-1.png" alt="brand logo">
             </div>
