--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -151,6 +151,17 @@
             </div>
         </div>
     </section>
+    <section class="testimonials_section">
+        <div class="row">
+            <h2 class="testimonial-heading">Our Testimonials</h2>
+        </div>
+        <div class="row">
+            <div class="col span_1_of_3 testimonial-box">
+                <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit.</blockquote>
+                <cite><img src="/My_Digisolve/Digisolve/resources/img/client-1.jpg" alt="Seun Taiwo"> Seun Taiwo</cite>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
