--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -160,6 +160,14 @@
                 <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit.</blockquote>
                 <cite><img src="/My_Digisolve/Digisolve/resources/img/client-1.jpg" alt="Seun Taiwo"> Seun Taiwo</cite>
             </div>
+            <div class="col span_1_of_3 testimonial-box">
+                <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit.</blockquote>
+                <cite><img src="/My_Digisolve/Digisolve/resources/img/client-2.jpg" alt="Seun Taiwo">Edward Prosper</cite>
+            </div>
+            <div class="col span_1_of_3 testimonial-box">
+                <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit.</blockquote>
+                <cite><img src="/My_Digisolve/Digisolve/resources/img/client-3.jpg" alt="Seun Taiwo">Curious Paul</cite>
+            </div>
         </div>
     </section>
 
