--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -184,11 +184,11 @@
                     </div>
                     <div>
                         <ul>
-                            <li><i class="fas fa-check"></i>SEO, SMO and PPC</li>
-                            <li><i class="fas fa-check"></i>2 Blogs Per Month</li>
-                            <li><i class="fas fa-check"></i>Facebook and Twitter Marketing</li>
-                            <li><i class="fas fa-check"></i>Monthly Performance</li>
-                            <li><i class="fas fa-check"></i>Traffic Report</li>
+                            <li><i class="fas fa-check small-icon"></i>SEO, SMO and PPC</li>
+                            <li><i class="fas fa-check small-icon"></i>2 Blogs Per Month</li>
+                            <li><i class="fas fa-check small-icon"></i>Facebook and Twitter Marketing</li>
+                            <li><i class="fas fa-check small-icon"></i>Monthly Performance</li>
+                            <li><i class="fas fa-check small-icon"></i>Traffic Report</li>
                         </ul>
                     </div>
                     <div>
