--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -196,6 +196,48 @@
                     </div>
                 </div>
             </div>
+            <div class="col span_1_of_3">
+                <div class="package-box">
+                    <div>
+                        <h4 class="package-heading">Starter</h4>
+                        <p class="package-price">$699 <span>3 months</span></p>
+                        <p class="package-para">Lorem ipsum dolor sit, amet consectett cum eni lorem lorem lorem lorem</p>
+                    </div>
+                    <div>
+                        <ul>
+                            <li><i class="fas fa-check small-icon"></i>SEO, SMO and PPC</li>
+                            <li><i class="fas fa-check small-icon"></i>2 Blogs Per Month</li>
+                            <li><i class="fas fa-check small-icon"></i>Facebook and Twitter Marketing</li>
+                            <li><i class="fas fa-check small-icon"></i>Monthly Performance</li>
+                            <li><i class="fas fa-check small-icon"></i>Traffic Report</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn-full">Sign Up Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col span_1_of_3">
+                <div class="package-box">
+                    <div>
+                        <h4 class="package-heading">Starter</h4>
+                        <p class="package-price">$699 <span>3 months</span></p>
+                        <p class="package-para">Lorem ipsum dolor sit, amet consectett cum eni lorem lorem lorem lorem</p>
+                    </div>
+                    <div>
+                        <ul>
+                            <li><i class="fas fa-check small-icon"></i>SEO, SMO and PPC</li>
+                            <li><i class="fas fa-check small-icon"></i>2 Blogs Per Month</li>
+                            <li><i class="fas fa-check small-icon"></i>Facebook and Twitter Marketing</li>
+                            <li><i class="fas fa-check small-icon"></i>Monthly Performance</li>
+                            <li><i class="fas fa-check small-icon"></i>Traffic Report</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn-full">Sign Up Now</a>
+                    </div>
+                </div>
+            </div>
     </section>
 
 </body>
