--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -199,15 +199,15 @@
             <div class="col span_1_of_3">
                 <div class="package-box">
                     <div>
-                        <h4 class="package-heading">Starter</h4>
-                        <p class="package-price">$699 <span>3 months</span></p>
+                        <h4 class="package-heading">Corporate</h4>
+                        <p class="package-price">$2,999 <span>6 months</span></p>
                         <p class="package-para">Lorem ipsum dolor sit, amet consectett cum eni lorem lorem lorem lorem</p>
                     </div>
                     <div>
                         <ul>
                             <li><i class="fas fa-check small-icon"></i>SEO, SMO and PPC</li>
-                            <li><i class="fas fa-check small-icon"></i>2 Blogs Per Month</li>
-                            <li><i class="fas fa-check small-icon"></i>Facebook and Twitter Marketing</li>
+                            <li><i class="fas fa-check small-icon"></i>4 Blogs Per Month</li>
+                            <li><i class="fas fa-check small-icon"></i>All social media platforms</li>
                             <li><i class="fas fa-check small-icon"></i>Monthly Performance</li>
                             <li><i class="fas fa-check small-icon"></i>Traffic Report</li>
                         </ul>
@@ -220,15 +220,15 @@
             <div class="col span_1_of_3">
                 <div class="package-box">
                     <div>
-                        <h4 class="package-heading">Starter</h4>
-                        <p class="package-price">$699 <span>3 months</span></p>
+                        <h4 class="package-heading">Enterprise</h4>
+                        <p class="package-price">$4,999 <span>6 months</span></p>
                         <p class="package-para">Lorem ipsum dolor sit, amet consectett cum eni lorem lorem lorem lorem</p>
                     </div>
                     <div>
                         <ul>
-                            <li><i class="fas fa-check small-icon"></i>SEO, SMO and PPC</li>
-                            <li><i class="fas fa-check small-icon"></i>2 Blogs Per Month</li>
-                            <li><i class="fas fa-check small-icon"></i>Facebook and Twitter Marketing</li>
+                            <li><i class="fas fa-check small-icon"></i>Personalised Marketing</li>
+                            <li><i class="fas fa-check small-icon"></i>8 Blogs Per Month</li>
+                            <li><i class="fas fa-check small-icon"></i>All social media channels</li>
                             <li><i class="fas fa-check small-icon"></i>Monthly Performance</li>
                             <li><i class="fas fa-check small-icon"></i>Traffic Report</li>
                         </ul>
