--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -239,6 +239,23 @@
                 </div>
             </div>
     </section>
+    <section class="contact-section">
+        <div class="row">
+            <h2 class="packages-heading">Check out our most Popular Packages</h2>
+        </div>
+        <div class="row">
+            <form action="#" method="post" class="contact-form">
+                <div class="row">
+                    <div class="col span_1_of_3">
+                        <label>Name</label>
+                    </div>
+                    <div class="col span_2_of_3">
+                        <input type="text" name='name' id="name" placeholder="Your Name" required>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
 
 </body>
 </html>
