--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -253,6 +253,32 @@
                         <input type="text" name='name' id="name" placeholder="Your Name" required>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col span_1_of_3">
+                        <label>Email</label>
+                    </div>
+                    <div class="col span_2_of_3">
+                        <input type="text" name='email' id="email" placeholder="Your Email" required>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span_1_of_3">
+                        <label>Newsletter</label>
+                    </div>
+                    <div class="col span_2_of_3">
+                        <input type="checkbox" name='Newsletter' id="Newsletter" checked>&nbsp;Yes,Please
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span_1_of_3">
+                        <label>Drop Us a Message</label>
+                    </div>
+                    <div class="col span_2_of_3">
+                        <textarea name='message' id="message" placeholder="Input your message">
+                            
+                        </textarea>
+                    </div>
+                </div>
             </form>
         </div>
     </section>
