--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -241,7 +241,7 @@
     </section>
     <section class="contact-section">
         <div class="row">
-            <h2 class="packages-heading">Check out our most Popular Packages</h2>
+            <h2 class="contact-heading">We're happy to hear from you</h2>
         </div>
         <div class="row">
             <form action="#" method="post" class="contact-form">
@@ -275,7 +275,7 @@
                     </div>
                     <div class="col span_2_of_3">
                         <textarea name='message' id="message" placeholder="Input your message">
-                            
+
                         </textarea>
                     </div>
                 </div>
