--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -263,7 +263,7 @@
                 </div>
                 <div class="row">
                     <div class="col span_1_of_3">
-                        <label>Newsletter</label>
+                        <label class="newsletter">Newsletter</label>
                     </div>
                     <div class="col span_2_of_3">
                         <input type="checkbox" name='Newsletter' id="Newsletter" checked>&nbsp;Yes,Please
