--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -247,7 +247,7 @@
             <form action="#" method="post" class="contact-form">
                 <div class="row">
                     <div class="col span_1_of_3">
-                        <label>Name</label>
+                        <label for="name">Name</label>
                     </div>
                     <div class="col span_2_of_3">
                         <input type="text" name='name' id="name" placeholder="Your Name" required>
@@ -255,7 +255,7 @@
                 </div>
                 <div class="row">
                     <div class="col span_1_of_3">
-                        <label>Email</label>
+                        <label for="email">Email</label>
                     </div>
                     <div class="col span_2_of_3">
                         <input type="text" name='email' id="email" placeholder="Your Email" required>
@@ -263,7 +263,7 @@
                 </div>
                 <div class="row">
                     <div class="col span_1_of_3">
-                        <label class="newsletter">Newsletter</label>
+                        <label for="newsletter" class="newsletter">Newsletter</label>
                     </div>
                     <div class="col span_2_of_3">
                         <input type="checkbox" name='Newsletter' id="Newsletter" checked>&nbsp;Yes,Please
@@ -271,12 +271,20 @@
                 </div>
                 <div class="row">
                     <div class="col span_1_of_3">
-                        <label>Drop Us a Message</label>
+                        <label for="message">Drop Us a Message</label>
                     </div>
                     <div class="col span_2_of_3">
                         <textarea name='message' id="message" placeholder="Input your message">
 
                         </textarea>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span_1_of_3">
+                        &nbsp;
+                    </div>
+                    <div class="col span_2_of_3">
+                       <input type="submit" class="btn btn-full" value="Send It">
                     </div>
                 </div>
             </form>
