--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -291,5 +291,27 @@
         </div>
     </section>
 
+    <footer>
+        <div class="row">
+            <div class="col span_1_of_2">
+                <ul class="footer-nav">
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Help & Support</a></li>
+                    <li><a href="#"></a>ios App</li>
+                    <li><a href="#">Android App</a></li>
+                </ul>
+            </div>
+            <div class="col span_1_of_2">
+                <ul class="social-links">
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"></a><i class="fab fa-teitter"></i></li>
+                    <li><a href="#"></a><i class="fab fa-google-plug-g"></i></li>
+                    <li><a href="#"></a><i class="fab fa-instagram"></i></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
