--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -311,6 +311,11 @@
                 </ul>
             </div>
         </div>
+        <div class="row">
+            <p>lorem lorem lorem lorem lorem lorem lorem lorem
+                lorem lorem lorem
+            </p>
+        </div>
     </footer>
 
 </body>
