--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -305,8 +305,8 @@
             <div class="col span_1_of_2">
                 <ul class="social-links">
                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"></a><i class="fab fa-teitter"></i></li>
-                    <li><a href="#"></a><i class="fab fa-google-plug-g"></i></li>
+                    <li><a href="#"></a><i class="fab fa-twitter"></i></li>
+                    <li><a href="#"></a><i class="fab fa-google-plus-g"></i></li>
                     <li><a href="#"></a><i class="fab fa-instagram"></i></li>
                 </ul>
             </div>
