--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -298,7 +298,7 @@
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Help & Support</a></li>
-                    <li><a href="#"></a>ios App</li>
+                    <li><a href="#">ios App</a></li>
                     <li><a href="#">Android App</a></li>
                 </ul>
             </div>
