--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -300,6 +300,7 @@
                     <li><a href="#">Help & Support</a></li>
                     <li><a href="#">ios App</a></li>
                     <li><a href="#">Android App</a></li>
+                    <!-- <li><a href="#">Android App</a></li> -->
                 </ul>
             </div>
             <div class="col span_1_of_2">
