--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -11,7 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="vendors/css/fluid.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
-    
+    <link rel="stylesheet" type="text/css" href="resources/css/media-query.css">
+
 </head>
 <body>
     <header>
