--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -22,7 +22,7 @@
              <ul class="main-nav">
                  <li><a href="#">Home</a></li>
                  <li><a href="#">Contact</a></li>
-                 <li><a href="#">About</a></li>
+                 <li><a href="#">About Us</a></li>
                  
              </ul>
         </nav>
