--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -247,7 +247,7 @@
         <div class="row">
             <form action="#" method="post" class="contact-form">
                 <div class="row">
-                    <div class="col span_1_of_3">
+                    <div class="col span_1_of_3 contact-label">
                         <label for="name">Name</label>
                     </div>
                     <div class="col span_2_of_3">
@@ -255,7 +255,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col span_1_of_3">
+                    <div class="col span_1_of_3 contact-label">
                         <label for="email">Email</label>
                     </div>
                     <div class="col span_2_of_3">
@@ -263,7 +263,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col span_1_of_3">
+                    <div class="col span_1_of_3 contact-label">
                         <label for="newsletter" class="newsletter">Newsletter</label>
                     </div>
                     <div class="col span_2_of_3">
@@ -271,7 +271,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col span_1_of_3">
+                    <div class="col span_1_of_3 contact-label">
                         <label for="message">Drop Us a Message</label>
                     </div>
                     <div class="col span_2_of_3">
