--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="sticky_nav">
             <img src="/My_Digisolve/Digisolve/resources/img/digisolve-logo.png"
              alt="Digisolve Logo" class="logo">
              <ul class="main-nav">
@@ -320,7 +320,7 @@
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
+    <script src="/My_Digisolve/Digisolve/resources/js/new_script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
