--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -301,7 +301,6 @@
                     <li><a href="#">Help & Support</a></li>
                     <li><a href="#">ios App</a></li>
                     <li><a href="#">Android App</a></li>
-                    <!-- <li><a href="#">Android App</a></li> -->
                 </ul>
             </div>
             <div class="col span_1_of_2">
@@ -314,9 +313,7 @@
             </div>
         </div>
         <div class="row">
-            <p>lorem lorem lorem lorem lorem lorem lorem lorem
-                lorem lorem lorem
-            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
