--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="vendors/css/fluid.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link rel="stylesheet" type="text/css" href="resources/css/media-query.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 </head>
 <body>
@@ -28,7 +29,7 @@
         </nav>
         <div class="header-box">
             <div class="header-text-box">
-                <h1>Digital Agency</h1>
+                <h1 class="animate__animated animate__rubberBand">Digital Agency</h1>
                 <h2>The one stop for all your digital solutions</h2>
             </div>
             <a href="" class="btn btn-full">Get a Quote Today</a>
@@ -36,14 +37,14 @@
     </header>
     <section class="about-section">
         <div class="row">
-            <div class="col span_1_of_2 about-box">
+            <div class="col span_1_of_2 about-box js--about-box">
                 <h2 class="about-heading">A Digital Agency focused on growing your Online Presence</h2>
                 <p class="about-para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                      Quaerat ducimus impedit, excepturi, corrupti ipsam autem minus sunt voluptas
                       iusto fuga soluta accusamus odit nesciunt eos error assumenda earum. Sint, veritatis?</p>
                 <a class="btn btn-ghost" href="">Read More</a>
             </div>
-            <div class="col span_1_of_2 about-box">
+            <div class="col span_1_of_2 about-box js--about-box">
                 <img src="/My_Digisolve/Digisolve/resources/img/about-img.jpg" alt="" class="laptop-img">
             </div>
         </div>
