--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -16,14 +16,14 @@
 
 </head>
 <body>
-    <header>
-        <nav class="sticky_nav">
+    <header id="home">
+        <nav>
             <img src="/My_Digisolve/Digisolve/resources/img/digisolve-logo.png"
              alt="Digisolve Logo" class="logo">
              <ul class="main-nav">
-                 <li><a href="#">Home</a></li>
-                 <li><a href="#">Contact</a></li>
-                 <li><a href="#">About Us</a></li>
+                 <li><a href="#home">Home</a></li>
+                 <li><a href="#contact">Contact</a></li>
+                 <li><a href="#about">About Us</a></li>
                  
              </ul>
         </nav>
@@ -35,7 +35,7 @@
             <a href="" class="btn btn-full">Get a Quote Today</a>
         </div>
     </header>
-    <section class="about-section">
+    <section class="about-section js--about-section" id="about">
         <div class="row">
             <div class="col span_1_of_2 about-box js--about-box">
                 <h2 class="about-heading">A Digital Agency focused on growing your Online Presence</h2>
