--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -10,9 +10,10 @@
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="vendors/css/fluid.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link rel="stylesheet" type="text/css" href="resources/css/media-query.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    
 
 </head>
 <body>
@@ -32,7 +33,7 @@
                 <h1 class="animate__animated animate__rubberBand">Digital Agency</h1>
                 <h2>The one stop for all your digital solutions</h2>
             </div>
-            <a href="" class="btn btn-full">Get a Quote Today</a>
+            <a href="" class="btn btn-full js--scroll-to-contact">Get a Quote Today</a>
         </div>
     </header>
     <section class="about-section js--about-section" id="about">
@@ -81,34 +82,34 @@
             </li>
         </ul>
     </section>
-    <section class="services-section">
+    <section class="services-section js--service-box">
         <div class="row">
             <h2 class="section-heading">Our Services</h2>
             <h3 class="section-sub-heading">Lorem ipsum dolor</h3>
         </div>
         <div class="row">
-            <div class="col span_1_of_4 service-box">
+            <div class="col span_1_of_4 service-box js--service-box">
                 <i class='fas fa-tags big-icon'></i>
                 <h4 class="service-heading">Branding</h4>
                 <p class="service-para">Lorem ipsum dolor sit amet consectetur adipi
                     voluptates, consequatur ea!</p>
                 <a class="service-link" href="">Read More...</a>
             </div>
-            <div class="col span_1_of_4 service-box">
+            <div class="col span_1_of_4 service-box js--service-box">
                 <i class='fas fa-pen big-icon'></i>
                 <h4 class="service-heading">Content</h4>
                 <p class="service-para">Lorem ipsum dolor sit amet consectetur adipi
                     voluptates, consequatur ea!</p>
                 <a class="service-link" href="">Read More...</a>
             </div>
-            <div class="col span_1_of_4 service-box">
+            <div class="col span_1_of_4 service-box js--service-box">
                 <i class='fas fa-funnel-dollar big-icon'></i>
                 <h4 class="service-heading">Marketing</h4>
                 <p class="service-para">Lorem ipsum dolor sit amet consectetur adipi
                     voluptates, consequatur ea!</p>
                 <a class="service-link" href="">Read More...</a>
             </div>
-            <div class="col span_1_of_4 service-box">
+            <div class="col span_1_of_4 service-box js--service-box">
                 <i class='fas fa-code big-icon'></i>
                 <h4 class="service-heading">Web Design</h4>
                 <p class="service-para">Lorem ipsum dolor sit amet consectetur adipi
@@ -172,7 +173,7 @@
             </div>
         </div>
     </section>
-    <section class="packages-section">
+    <section class="packages-section js--packages-section">
         <div class="row">
             <h2 class="packages-heading">Check out our most Popular Packages</h2>
         </div>
@@ -317,11 +318,11 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </div>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js" integrity="sha512-fHXRw0CXruAoINU11+hgqYvY/PcsOWzmj0QmcSOtjlJcqITbPyypc8cYpidjPurWpCnlB8VKfRwx6PIpASCUkQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="/My_Digisolve/Digisolve/resources/js/new_script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
+    <script src="/My_Digisolve/Digisolve/resources/js/new_script.js"></script>
 </body>
 </html>
