--- a/PRACTICE/My_Digisolve/Digisolve/index.html
+++ b/PRACTICE/My_Digisolve/Digisolve/index.html
@@ -10,7 +10,7 @@
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="vendors/css/fluid.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link rel="stylesheet" type="text/css" href="resources/css/media-query.css">
     
@@ -36,16 +36,16 @@
             <a href="" class="btn btn-full js--scroll-to-contact">Get a Quote Today</a>
         </div>
     </header>
-    <section class="about-section js--about-section" id="about">
+    <section class="about-section" id="about">
         <div class="row">
-            <div class="col span_1_of_2 about-box js--about-box">
+            <div class="col span_1_of_2 about-box">
                 <h2 class="about-heading">A Digital Agency focused on growing your Online Presence</h2>
                 <p class="about-para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                      Quaerat ducimus impedit, excepturi, corrupti ipsam autem minus sunt voluptas
                       iusto fuga soluta accusamus odit nesciunt eos error assumenda earum. Sint, veritatis?</p>
                 <a class="btn btn-ghost" href="">Read More</a>
             </div>
-            <div class="col span_1_of_2 about-box js--about-box">
+            <div class="col span_1_of_2 about-box">
                 <img src="/My_Digisolve/Digisolve/resources/img/about-img.jpg" alt="" class="laptop-img">
             </div>
         </div>
